objects/Location__x.object
<CustomObject>
    <externalDataSource>BMX_EXTERNAL</externalDataSource>
    <externalName>Location</externalName>
    <fields>
        <fullName>Category_c__c</fullName>
        <externalDeveloperName>Category__c</externalDeveloperName>
        <label>Category</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>000</fullName>
                    <label>000 - bioMerieux Companies</label>
                </value>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>100</fullName>
                    <label>100 - Commercial labs</label>
                </value>
                <value>
                    <fullName>110</fullName>
                </value>
                <value>
                    <fullName>116</fullName>
                </value>
                <value>
                    <fullName>120</fullName>
                </value>
                <value>
                    <fullName>1A2</fullName>
                    <label>1A2 - DE-Laborfacharzt</label>
                </value>
                <value>
                    <fullName>1C1</fullName>
                    <label>1C1 - US-Lg comm'l ref lab</label>
                </value>
                <value>
                    <fullName>1C2</fullName>
                    <label>1C2 - US-Other comm'l lab</label>
                </value>
                <value>
                    <fullName>1C3</fullName>
                    <label>1C3 - US-Public Health Fac</label>
                </value>
                <value>
                    <fullName>1C4</fullName>
                    <label>1C4 - US-Fertility Clinic</label>
                </value>
                <value>
                    <fullName>1C5</fullName>
                    <label>1C5 - US-Veterinary Fac</label>
                </value>
                <value>
                    <fullName>1C6</fullName>
                    <label>1C6 - US-Doctor's grp prac</label>
                </value>
                <value>
                    <fullName>1CA</fullName>
                </value>
                <value>
                    <fullName>1CC</fullName>
                </value>
                <value>
                    <fullName>1D1</fullName>
                    <label>1D1 - FR Lab &lt; 50 Dossiers</label>
                </value>
                <value>
                    <fullName>1D2</fullName>
                    <label>1D2 - FR Lab &lt; 25 Dossier</label>
                </value>
                <value>
                    <fullName>1D3</fullName>
                    <label>1D3 - FR Lab télévente</label>
                </value>
                <value>
                    <fullName>1D4</fullName>
                    <label>1D4 - FR Lab 50/100 dossie</label>
                </value>
                <value>
                    <fullName>1D5</fullName>
                    <label>1D5 - FR Lab 100/200 dossi</label>
                </value>
                <value>
                    <fullName>1D6</fullName>
                    <label>1D6 - FR Lab 200/400 Dossi</label>
                </value>
                <value>
                    <fullName>1D7</fullName>
                    <label>1D7 - FR Lab 400/ 800 Doss</label>
                </value>
                <value>
                    <fullName>1D8</fullName>
                    <label>1D8 - FR Lab &gt; 800 Dossier</label>
                </value>
                <value>
                    <fullName>1D9</fullName>
                    <label>1D9 - FR SEL</label>
                </value>
                <value>
                    <fullName>1E1</fullName>
                    <label>1E1 - FR SEL &lt; 100 Dossier</label>
                </value>
                <value>
                    <fullName>1E2</fullName>
                    <label>1E2 - FR SEL 100/200 Dossi</label>
                </value>
                <value>
                    <fullName>1E3</fullName>
                    <label>1E3 - FR SEL 200/400 Dossi</label>
                </value>
                <value>
                    <fullName>1E4</fullName>
                    <label>1E4 - FR SEL 400/800 Dossi</label>
                </value>
                <value>
                    <fullName>1E5</fullName>
                    <label>1E5 - FR SEL 800/1600 Doss</label>
                </value>
                <value>
                    <fullName>1E6</fullName>
                    <label>1E6 - FR SEL &gt; 1600 dossie</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloseDate__c</fullName>
        <externalDeveloperName>CloseDate</externalDeveloperName>
        <label>Close Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConstructionEndDate__c</fullName>
        <externalDeveloperName>ConstructionEndDate</externalDeveloperName>
        <label>Construction End Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConstructionStartDate__c</fullName>
        <externalDeveloperName>ConstructionStartDate</externalDeveloperName>
        <label>Construction Start Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <externalDeveloperName>CreatedById</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <externalDeveloperName>CreatedDate</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <externalDeveloperName>Description</externalDeveloperName>
        <label>Description</label>
        <length>255</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distributor_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Distributor__c</externalDeveloperName>
        <label>Distributor</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division_c__c</fullName>
        <externalDeveloperName>Division__c</externalDeveloperName>
        <label>Division</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>010</fullName>
                    <label>010 - Diagnostic</label>
                </value>
                <value>
                    <fullName>020</fullName>
                    <label>020 - POL</label>
                </value>
                <value>
                    <fullName>040</fullName>
                    <label>040 - Food</label>
                </value>
                <value>
                    <fullName>050</fullName>
                    <label>050 - Pharma</label>
                </value>
                <value>
                    <fullName>030</fullName>
                    <label>030 - Blood Bank</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DrivingDirections__c</fullName>
        <externalDeveloperName>DrivingDirections</externalDeveloperName>
        <label>Driving Directions</label>
        <length>1000</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fax_c__c</fullName>
        <externalDeveloperName>Fax__c</externalDeveloperName>
        <label>Fax</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Inactive_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Inactive__c</externalDeveloperName>
        <label>Inactive</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsInventoryLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsInventoryLocation</externalDeveloperName>
        <label>Inventory Location</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMobile__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsMobile</externalDeveloperName>
        <label>Mobile Location</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Language_c__c</fullName>
        <externalDeveloperName>Language__c</externalDeveloperName>
        <label>Language</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CS</fullName>
                </value>
                <value>
                    <fullName>DA</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>EL</fullName>
                </value>
                <value>
                    <fullName>EN</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>ET</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>HE</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IS</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JA</fullName>
                </value>
                <value>
                    <fullName>KO</fullName>
                </value>
                <value>
                    <fullName>LT</fullName>
                </value>
                <value>
                    <fullName>LV</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>NL</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
                <value>
                    <fullName>PL</fullName>
                </value>
                <value>
                    <fullName>PT</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>RU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <externalDeveloperName>LastModifiedById</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <externalDeveloperName>LastModifiedDate</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <externalDeveloperName>LastReferencedDate</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <externalDeveloperName>LastViewedDate</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <externalDeveloperName>Latitude</externalDeveloperName>
        <label>Latitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationLevel__c</fullName>
        <externalDeveloperName>LocationLevel</externalDeveloperName>
        <label>Location Level</label>
        <precision>9</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocationType__c</fullName>
        <externalDeveloperName>LocationType</externalDeveloperName>
        <label>Location Type</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Site</fullName>
                </value>
                <value>
                    <fullName>Van</fullName>
                </value>
                <value>
                    <fullName>Plant</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <externalDeveloperName>Longitude</externalDeveloperName>
        <label>Longitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Market_c__c</fullName>
        <externalDeveloperName>Market__c</externalDeveloperName>
        <label>Market</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0010</fullName>
                    <label>0010 - Clinical</label>
                </value>
                <value>
                    <fullName>0020</fullName>
                    <label>0020 - Industry</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <externalDeveloperName>Name</externalDeveloperName>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OpenDate__c</fullName>
        <externalDeveloperName>OpenDate</externalDeveloperName>
        <label>Open Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OwnerId__c</fullName>
        <externalDeveloperName>OwnerId</externalDeveloperName>
        <label>Owner ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO1_c__c</fullName>
        <externalDeveloperName>PO1__c</externalDeveloperName>
        <label># Location</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentLocationId__c</fullName>
        <externalDeveloperName>ParentLocationId</externalDeveloperName>
        <label>Parent Location ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_c__c</fullName>
        <externalDeveloperName>Phone__c</externalDeveloperName>
        <label>Phone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PossessionDate__c</fullName>
        <externalDeveloperName>PossessionDate</externalDeveloperName>
        <label>Possession Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RemodelEndDate__c</fullName>
        <externalDeveloperName>RemodelEndDate</externalDeveloperName>
        <label>Remodel End Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RemodelStartDate__c</fullName>
        <externalDeveloperName>RemodelStartDate</externalDeveloperName>
        <label>Remodel Start Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RootLocationId__c</fullName>
        <externalDeveloperName>RootLocationId</externalDeveloperName>
        <label>Root Location ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_AccountKey_c__c</fullName>
        <externalDeveloperName>SAP_AccountKey__c</externalDeveloperName>
        <label>SAP Account Key</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_AccountName2_c__c</fullName>
        <externalDeveloperName>SAP_AccountName2__c</externalDeveloperName>
        <label>SAP Account Name 2</label>
        <length>100</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_AccountName_c__c</fullName>
        <externalDeveloperName>SAP_AccountName__c</externalDeveloperName>
        <label>SAP Account Name</label>
        <length>100</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_AccountNumber_c__c</fullName>
        <externalDeveloperName>SAP_AccountNumber__c</externalDeveloperName>
        <label>SAP Account Number</label>
        <length>50</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Interfaced_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>SAP_Interfaced__c</externalDeveloperName>
        <label>SAP Interfaced</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subsidiary_c__c</fullName>
        <externalDeveloperName>Subsidiary__c</externalDeveloperName>
        <label>Subsidiary</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                    <label>001 - bioMérieux France</label>
                </value>
                <value>
                    <fullName>002</fullName>
                    <label>002 - bioMérieux Italia</label>
                </value>
                <value>
                    <fullName>003</fullName>
                    <label>003 - bioMérieux Germany</label>
                </value>
                <value>
                    <fullName>004</fullName>
                    <label>004 - bioMérieux Spain</label>
                </value>
                <value>
                    <fullName>005</fullName>
                    <label>005 - bioMérieux Belgium</label>
                </value>
                <value>
                    <fullName>006</fullName>
                    <label>006 - bioMérieux Switzerland</label>
                </value>
                <value>
                    <fullName>007</fullName>
                    <label>007 - bioMérieux United Kingdom</label>
                </value>
                <value>
                    <fullName>008</fullName>
                    <label>008 - bioMérieux Portugal</label>
                </value>
                <value>
                    <fullName>009</fullName>
                    <label>009 - bioMérieux Netherlands</label>
                </value>
                <value>
                    <fullName>010</fullName>
                    <label>010 - bioMérieux Poland</label>
                </value>
                <value>
                    <fullName>011</fullName>
                    <label>011 - bioMérieux Austria</label>
                </value>
                <value>
                    <fullName>012</fullName>
                    <label>012 - bioMérieux Greece</label>
                </value>
                <value>
                    <fullName>013</fullName>
                    <label>013 - bioMérieux Turkey</label>
                </value>
                <value>
                    <fullName>014</fullName>
                    <label>014 - bioMérieux Russia</label>
                </value>
                <value>
                    <fullName>015</fullName>
                    <label>015 - bioMérieux India</label>
                </value>
                <value>
                    <fullName>016</fullName>
                    <label>016 - bioMérieux Norway</label>
                </value>
                <value>
                    <fullName>017</fullName>
                    <label>017 - bioMérieux Denmark</label>
                </value>
                <value>
                    <fullName>018</fullName>
                    <label>018 - bioMérieux Sweden</label>
                </value>
                <value>
                    <fullName>019</fullName>
                    <label>019 - bioMérieux Finland</label>
                </value>
                <value>
                    <fullName>021</fullName>
                    <label>021 - bioMérieux United States</label>
                </value>
                <value>
                    <fullName>022</fullName>
                    <label>022 - bioMérieux Canada</label>
                </value>
                <value>
                    <fullName>023</fullName>
                    <label>023 - bioMérieux Mexico</label>
                </value>
                <value>
                    <fullName>031</fullName>
                    <label>031 – bioMérieux Japan Ltd.</label>
                </value>
                <value>
                    <fullName>032</fullName>
                    <label>032 - bioMérieux China HK</label>
                </value>
                <value>
                    <fullName>033</fullName>
                    <label>033 - bioMérieux Australia</label>
                </value>
                <value>
                    <fullName>034</fullName>
                    <label>034 - bioMérieux Korea</label>
                </value>
                <value>
                    <fullName>035</fullName>
                    <label>035 - bioMérieux Thailand</label>
                </value>
                <value>
                    <fullName>037</fullName>
                    <label>037 - bioMérieux Singapore</label>
                </value>
                <value>
                    <fullName>040</fullName>
                    <label>040 - bMx Singapore Rep Office Indonesia</label>
                </value>
                <value>
                    <fullName>041</fullName>
                    <label>041 - bioMérieux Brazil</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <externalDeveloperName>SystemModstamp</externalDeveloperName>
        <label>System Modstamp</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeZone__c</fullName>
        <externalDeveloperName>TimeZone</externalDeveloperName>
        <label>Time Zone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pacific/Kiritimati</fullName>
                    <label>(GMT+14:00) Line Islands Time (Pacific/Kiritimati)</label>
                </value>
                <value>
                    <fullName>Pacific/Enderbury</fullName>
                    <label>(GMT+13:00) Phoenix Islands Time (Pacific/Enderbury)</label>
                </value>
                <value>
                    <fullName>Pacific/Tongatapu</fullName>
                    <label>(GMT+13:00) Tonga Standard Time (Pacific/Tongatapu)</label>
                </value>
                <value>
                    <fullName>Pacific/Chatham</fullName>
                    <label>(GMT+12:45) Chatham Standard Time (Pacific/Chatham)</label>
                </value>
                <value>
                    <fullName>Asia/Kamchatka</fullName>
                    <label>(GMT+12:00) Petropavlovsk-Kamchatski Standard Time (Asia/Kamchatka)</label>
                </value>
                <value>
                    <fullName>Pacific/Auckland</fullName>
                    <label>(GMT+12:00) New Zealand Standard Time (Pacific/Auckland)</label>
                </value>
                <value>
                    <fullName>Pacific/Fiji</fullName>
                    <label>(GMT+12:00) Fiji Standard Time (Pacific/Fiji)</label>
                </value>
                <value>
                    <fullName>Pacific/Guadalcanal</fullName>
                    <label>(GMT+11:00) Solomon Islands Time (Pacific/Guadalcanal)</label>
                </value>
                <value>
                    <fullName>Pacific/Norfolk</fullName>
                    <label>(GMT+11:00) Norfolk Island Time (Pacific/Norfolk)</label>
                </value>
                <value>
                    <fullName>Australia/Lord_Howe</fullName>
                    <label>(GMT+10:30) Lord Howe Standard Time (Australia/Lord_Howe)</label>
                </value>
                <value>
                    <fullName>Australia/Brisbane</fullName>
                    <label>(GMT+10:00) Australian Eastern Standard Time (Australia/Brisbane)</label>
                </value>
                <value>
                    <fullName>Australia/Sydney</fullName>
                    <label>(GMT+10:00) Australian Eastern Standard Time (Australia/Sydney)</label>
                </value>
                <value>
                    <fullName>Australia/Adelaide</fullName>
                    <label>(GMT+09:30) Australian Central Standard Time (Australia/Adelaide)</label>
                </value>
                <value>
                    <fullName>Australia/Darwin</fullName>
                    <label>(GMT+09:30) Australian Central Standard Time (Australia/Darwin)</label>
                </value>
                <value>
                    <fullName>Asia/Seoul</fullName>
                    <label>(GMT+09:00) Korean Standard Time (Asia/Seoul)</label>
                </value>
                <value>
                    <fullName>Asia/Tokyo</fullName>
                    <label>(GMT+09:00) Japan Standard Time (Asia/Tokyo)</label>
                </value>
                <value>
                    <fullName>Asia/Hong_Kong</fullName>
                    <label>(GMT+08:00) Hong Kong Standard Time (Asia/Hong_Kong)</label>
                </value>
                <value>
                    <fullName>Asia/Kuala_Lumpur</fullName>
                    <label>(GMT+08:00) Malaysia Time (Asia/Kuala_Lumpur)</label>
                </value>
                <value>
                    <fullName>Asia/Manila</fullName>
                    <label>(GMT+08:00) Philippine Standard Time (Asia/Manila)</label>
                </value>
                <value>
                    <fullName>Asia/Shanghai</fullName>
                    <label>(GMT+08:00) China Standard Time (Asia/Shanghai)</label>
                </value>
                <value>
                    <fullName>Asia/Singapore</fullName>
                    <label>(GMT+08:00) Singapore Standard Time (Asia/Singapore)</label>
                </value>
                <value>
                    <fullName>Asia/Taipei</fullName>
                    <label>(GMT+08:00) Taipei Standard Time (Asia/Taipei)</label>
                </value>
                <value>
                    <fullName>Australia/Perth</fullName>
                    <label>(GMT+08:00) Australian Western Standard Time (Australia/Perth)</label>
                </value>
                <value>
                    <fullName>Asia/Bangkok</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Bangkok)</label>
                </value>
                <value>
                    <fullName>Asia/Ho_Chi_Minh</fullName>
                    <label>(GMT+07:00) Indochina Time (Asia/Ho_Chi_Minh)</label>
                </value>
                <value>
                    <fullName>Asia/Jakarta</fullName>
                    <label>(GMT+07:00) Western Indonesia Time (Asia/Jakarta)</label>
                </value>
                <value>
                    <fullName>Asia/Rangoon</fullName>
                    <label>(GMT+06:30) Myanmar Time (Asia/Rangoon)</label>
                </value>
                <value>
                    <fullName>Asia/Dhaka</fullName>
                    <label>(GMT+06:00) Bangladesh Standard Time (Asia/Dhaka)</label>
                </value>
                <value>
                    <fullName>Asia/Kathmandu</fullName>
                    <label>(GMT+05:45) Nepal Time (Asia/Kathmandu)</label>
                </value>
                <value>
                    <fullName>Asia/Colombo</fullName>
                    <label>(GMT+05:30) India Standard Time (Asia/Colombo)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VisitorAddressId__c</fullName>
        <externalDeveloperName>VisitorAddressId</externalDeveloperName>
        <label>Address ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Locations</pluralLabel>
</CustomObject>